Fixed font color bug on mobile devices (hopefully)

--- a/public/css/app-dark.css
+++ b/public/css/app-dark.css
@@ -1,5 +1,6 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
+    color:black;
 }
 p
 {
